# SphinxSDK-demo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
ConsoleDemo_FPN/: ConsoleDemo.cpp  ConsoleDemo.sln  ConsoleDemo.vcxproj  ConsoleDemo.vcxproj.filters  bayer.h  darknoise.cpp  darknoise.h  pose.cpp  pose.h  tcp_server.cpp  tcp_server.h  vcpkg.json  wrist.cpp  wrist.h
ConsoleDemo_FPN/.svn/: wc.db
ConsoleDemo_FPN/ipch/CONSOLEDEMO-cf5df7f9/: CONSOLEDEMO-3d60d6be.ipch
ConsoleDemo_FPN/scripts/: prepare_hand_landmark_model.py  prepare_models.py
ConsoleDemo_FPN/x64/Release/: ConsoleDemo.iobj  ConsoleDemo.ipdb  ConsoleDemo.pch  ConsoleDemo.pch.codeanalysis
ConsoleDemo_FPN/x64/Release/ConsoleDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleDemo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PyDemo/: README.md  analyze_image.py  app.py  broadcaster.py  calibrate.py  capture.py  capture_test.py  charuco.py  make_charuco.py  overlay.py  pipeline.py  presenter.py  pyproject.toml  requirements.txt  run_app.bat  run_app_quiet.bat  sphinx.py  tcp_client.py  undistort.py  view.py  wrist.py
QtDemo/: CMakeLists.txt  Camera.cpp  Camera.h  ControlPanel.cpp  ControlPanel.h  FeatureEditor.cpp  FeatureEditor.h  FeaturePanel.cpp  FeaturePanel.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp
SphinxLib/: SphinxLib.h
SphinxLib/Debug/: SphinxLib.lib
SphinxLib/Debug64/: SphinxLib.lib
SphinxLib/Release/: SphinxLib.lib
SphinxLib/Release64/: SphinxLib.lib
SphinxLib/Release64_NoXmlStatic/: SphinxLib.lib
SphinxLib/Release_NoXMlStatic/: SphinxLib.lib
scripts/: build.bat  setup.bat  setup.ps1
